--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,7 @@
-// TODO
+.headerSpacing{
+    margin: 4rem auto;
+    max-width: 700px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+  }
