--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,48 @@
-// TODO
+.container{
+    max-width: 900px;
+    margin:5rem auto;
+  
+  
+  .post{
+    max-width: 720px;
+    display: flex;
+    flex-direction: column;
+  
+      strong{
+        font-size:1.5rem;
+      }
+      p{
+        font-size: 0.8rem;
+        padding:0.3rem 0;
+        color: var(--gray-100);
+      }
+  
+      time{
+        font-size: 0.7rem;
+        color: var(--gray-200);
+      }
+      small{
+        font-size: 0.7rem;
+        color: var(--gray-200);
+        margin: 0 1rem;
+      }
+      &:hover strong{
+        color: var(--pink-100);
+      }
+      & + a{
+        margin: 2rem 0;
+      }
+    }
+    button{
+      color: var(--pink-100);
+      cursor: pointer;
+      border: none;
+      background:transparent;
+      font-weight: bold;
+      font-size: 1.1rem;
+  
+      &:hover{
+        filter: brightness(0.9);
+      }
+    }
+  }
