--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,7 +1,7 @@
-.headerSpacing{
-    margin: 4rem auto;
-    max-width: 700px;
-    display: flex;
-    align-items: center;
-    align-content: center;
-  }
+.postHeader{
+  height: 6rem;
+  max-width: 700px;
+  margin:0 auto;
+  display:flex;
+  align-items: center;
+}
