--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,48 +1,53 @@
-.container{
-    max-width: 900px;
-    margin:5rem auto;
-  
-  
-  .post{
-    max-width: 720px;
+.posts {
+  margin-top:2em;
+
+  > a {
+    display:block;
+  }
+
+  a + a {
+    margin-top: 3rem;
+  }
+
+  button {
+    border:none;
+    background:transparent;
+    font-weight:600;
+    font-size: 1.125rem;
+    color:var(--highlight);
+    margin-top:4rem;
+  }
+
+}
+
+.post {
+
+  strong {
+    font-size:1.75rem;
+    font-weight: bold;
+    color:var(--heading);
+  }
+
+  p{
+    margin-top:0.5rem;
+    font-size:1.125rem;
+  }
+
+  ul {
+    list-style: none;
+    margin-top:1.5rem;
     display: flex;
-    flex-direction: column;
-  
-      strong{
-        font-size:1.5rem;
+
+    & li {
+      font-size:0.875rem;
+
+      & svg {
+        margin-right: 0.5rem;
       }
-      p{
-        font-size: 0.8rem;
-        padding:0.3rem 0;
-        color: var(--gray-100);
-      }
-  
-      time{
-        font-size: 0.7rem;
-        color: var(--gray-200);
-      }
-      small{
-        font-size: 0.7rem;
-        color: var(--gray-200);
-        margin: 0 1rem;
-      }
-      &:hover strong{
-        color: var(--pink-100);
-      }
-      & + a{
-        margin: 2rem 0;
-      }
-    }
-    button{
-      color: var(--pink-100);
-      cursor: pointer;
-      border: none;
-      background:transparent;
-      font-weight: bold;
-      font-size: 1.1rem;
-  
-      &:hover{
-        filter: brightness(0.9);
+
+      & + li {
+        margin-left: 1.625rem;
       }
     }
   }
+}
