--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,34 +5,41 @@
 }
 
 :root {
-  --white:#F8F8F8;
-  --pink-100:#FF57B2;
-  --gray-100:#D7D7D7;
-  --gray-200:#BBBBBB;
-  --gray-800:#1A1D23;
+  --highlight: #FF57B2;
+  --heading: #F8F8F8;
+  --background:#1A1D23;
+  --info:#BBBBBB;
+  --body:#D7D7D7;
+  --border: #282C34;
 }
 
-body{
-  background-color: var(--gray-800);
-  color:var(--white);
+body {
+  background:var(--background);
+  color:var(--body)
 }
-@media (max-width: 1080px){
+
+@media (max-width:1080px) {
   html {
-      font-size: 93.75%;
+    font-size: 93.75%;
   }
 }
-@media (max-width: 720px){
+
+@media (max-width:720px) {
   html {
-      font-size: 87.5%;
+    font-size: 87.5%;
   }
 }
-body,input,textarea,select,button {
-  font: 400 1rem "Inter",sans-serif;
+
+body, input, textarea, button, select {
+  font: 400 1rem "Inter", sans-serif;
 }
-button{
-  cursor:pointer;
+
+button {
+  cursor: pointer;
 }
-a{
-  text-decoration:none;
+
+a {
   color: inherit;
+  text-decoration: none;
 }
+
